--- a/main.css
+++ b/main.css
@@ -14,7 +14,8 @@ h1 {
 
 body {
         background-color: #C62828;
-        border:solid 10px #43A047;
+        border-radius: 10px;
+        border:groove 10px #43A047;
         width: auto;
         height: 900px;
         box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
