--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ h1 {
         font-size: 50px;
         background-color: #4CAF50;
         padding: 10px;
-        border-radius: 50px;
+        border-radius: 25px;
         box-shadow: 0 5px 0 rgba(255, 255, 255, 0.5) inset;
 -moz-box-shadow: 0 3px 0 rgba(255, 255, 255, 0.5) inset;
 -webkit-box-shadow: 0 3px 0 rgba(255, 255, 255, 0.5) inset;
@@ -18,10 +18,14 @@ background-image:url(http://www.zingerbugimages.com/backgrounds/green_lights_sea
 background-position:top left;
 background-repeat:repeat;
 background-attachment:fixed;
+border-style: 3px inset;
+height: 100%;
+width: 100%;
+
 }
 
 
-.treeHeight {
+input, textarea {
         margin: 30px 0;
         width: 30%;
         background-color: #FCF5D8;
@@ -46,10 +50,12 @@ color: #ffffff;
 border-radius: 12px;
 -moz-border-radius: 12px;
 -webkit-border-radius: 50px;
-border: 1px solid #F36C8C;
+border: 1px outset #F36C8C;
 cursor: pointer;
 box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
 -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
 -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;"
 }
+
+
 
